[package]
name = "dsbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.2"